# sem2_lab4_b

./: CMakeLists.txt  commands.h  main.c
KD_tree/: CMakeLists.txt  Info.c  Item.c  KD_tree.h  Key.c  Node.c  Tree.c  file_input.c  file_work.c  graphviz_modul.c  iterator.c
libs/: CMakeLists.txt  MyMath.c  MyString.c
libs/headers/: Errors.h  MyMath.h  MyString.h
segmental_tree/: CMakeLists.txt  segmental_tree.c  segmental_tree.h
tree_dialog/: CMakeLists.txt  dialog_functions.c  tree_dialog.h
